--- a/src/Components/Program/program.css
+++ b/src/Components/Program/program.css
@@ -19,7 +19,37 @@
     align-items: center;
     gap: 20px;
 }
-.program .img img{
+.program .img img:not(.imgHover img){
     width: 400px;
     border-radius: 20px;
+}
+
+/* hoverimg */
+.progImg{
+    position: relative;
+}
+.progImg .imgHover{
+    background: #5d5caf88;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    opacity: 0;
+    padding-top: 50px;
+    transition: 0.5s;
+
+}
+.imgHover img{
+    width: 100px;
+}
+
+.progImg:hover .imgHover{
+    opacity: 1;
+    padding: 0;
+
 }
