--- a/src/Components/testimonials/testimonials.css
+++ b/src/Components/testimonials/testimonials.css
@@ -61,3 +61,102 @@
 .user p{
     padding: 5px;
 }
+
+
+/* -------media---queriez----- */
+/* @media(max-width:900px){
+    .testimonials .backArrow, .nextArrow {
+        padding: 7px;
+        width: 15px;
+    }
+    .slider ul{
+        width: 170%;
+    }
+    .slider ul li{
+        padding-left: 30px;
+    }
+
+}
+@media(max-width:7540px){
+    .userImg img{
+    width: 30px;
+    height: 30px;
+}
+.userInfo h3{
+    font-size: 15px;
+}
+.userInfo span{
+    font-size: 10px;
+}
+.user p{
+    font-size: 15px;
+}
+    
+
+}
+
+@media(max-width:608px){
+    .testimonials  {
+       padding: 0 30px;
+    }
+    .user p{
+    font-size: 10px;
+}
+.userInfo h3{
+    font-size: 10px;
+    margin-bottom: 19px;
+}
+.userInfo span{
+    font-size: 8px;
+    
+}
+        
+
+
+} */
+
+@media (max-width:870px){
+    .testimonials{
+        padding: 0 40px;
+    }
+    .testimonials .backArrow, .nextArrow{
+        width: 15px;
+        padding: 10px;
+    }
+    .testimonials ul li{
+        padding: 8px;
+    }
+    .userImg img{
+        width: 30px;
+        height: 30px;
+        border: 2px solid var(--main-color);
+    }
+    .userInfo h3{
+        font-size: 14px;
+    }
+    .userInfo span{
+        font-size: 10px;
+    }
+}
+
+@media (max-width:450px){
+    .testimonials{
+        padding: 0 10px;
+        margin: -20px;
+    }
+    .testimonials .backArrow, .nextArrow{
+        display: none;
+    }
+    .user p{
+        font-size: 10px;
+        
+    }
+    .userInfo h3{
+        font-size: 10px;
+        margin-bottom: 17px;
+    }
+    .userInfo span{
+        font-size: 6px;
+    }
+
+}
