--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -16,6 +16,7 @@
 .logo{
     width: 120px;
     margin-left: 20px;
+    /* margin-top: -20px; */
     cursor: pointer;
 }
 
@@ -23,13 +24,14 @@
     margin-right: 20px;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .navList ul{
     display: flex;
     padding-left: 20px;
     cursor: pointer;
+    position: relative;
 }
 
 .navList ul li{
@@ -62,4 +64,61 @@
     padding: 4px 0;
     color: #ffff;
     background:rgb(69, 69, 220) ;
+}
+.menu{
+    width: 20px;
+    position: fixed;
+    top: 12px;
+    right: 40px;
+    z-index: 20;
+    display: none;
+}
+/* -----media qu------ */
+@media (max-width:1650px){
+    .logo{
+        margin-top: -20px;
+    }
+
+}
+@media (max-width:800px){
+    .logo{
+        margin-top: 0px;
+    }
+    .navList{
+        margin: 0;
+    }
+    .navList ul{
+        display: block;
+        position: fixed;
+        top: -20px;
+        right: -200;
+        bottom: 0;
+        background: var(--main-color);
+        padding: 70px 30px 0;
+        
+
+    }
+    .navList ul li{
+        margin-bottom: 20px;
+    }
+    .navList ul li:hover{
+        background: #000000b3;
+        padding: 0px 10px;
+        border-radius: 5px;
+    }
+    .navList ul button{
+        border-radius: 10px;
+        padding: 5px;
+    }
+
+    
+    .showToggleNav{
+        right: 0;
+       /*  */
+    }
+    .menu{
+        display: block;
+    }
+
+
 }
