--- a/src/Components/contact/contact.css
+++ b/src/Components/contact/contact.css
@@ -55,3 +55,30 @@
     color: #fff;
     font-weight: 600;
 }
+
+@media (max-width:558px){
+    .contact{
+        flex-direction: column;
+    }
+    .contactRight{
+        max-width: 80%;
+
+
+    }
+    .contactRight button{
+        padding: 4px 3px;
+        font-size: 12px;
+    }
+    .contactLeft p img{
+        width: 17px;
+    }
+    .contactLeft h3 img{
+        width: 18px;
+    }
+    .contactLeft h3{
+        font-size: 16px;
+    }
+    .contactLeft p{
+        font-size: 13px;
+    }
+}
