--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -15,3 +15,14 @@
 p,a{
     font-size: 15px;
 }
+
+@media (max-width:527px){
+    .footerText{
+        flex-direction: column;
+    }
+    p,a{
+        font-size: 10px;
+}
+
+
+}
