--- a/src/Components/hero/Hero.css
+++ b/src/Components/hero/Hero.css
@@ -26,4 +26,22 @@
     margin-top: -40px;
     
 }
+/* media queriez */
+
+@media (max-width:700px){
+    .heroText p{
+        
+        margin-top:-40px;
+        width: 80%;
+        margin: auto;
+    }
+    .heroText h2{
+        font-size: 38px;
+        width: 90%;
+        margin: -100px  auto 0;
+    }
+    .hero button{
+        margin-top: 20px;
+    }
+}
     
