--- a/src/Components/hero/Hero.css
+++ b/src/Components/hero/Hero.css
@@ -39,6 +39,7 @@
         font-size: 38px;
         width: 90%;
         margin: -100px  auto 0;
+        color: #fff;
     }
     .hero button{
         margin-top: 20px;
