--- a/src/Components/contact/contact.css
+++ b/src/Components/contact/contact.css
@@ -57,6 +57,7 @@
 }
 span{
     font-size: 10px;
+    margin-top: 10px;
 }
 
 @media (max-width:758px){
@@ -71,7 +72,7 @@ span{
 
     }
     .contactForm{
-        max-width: 55%;
+        max-width: 90%;
         margin: auto;
         
     }
